--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
         <div class="login-container">
             <form id="loginForm">
                 <h2>Informe Seus Dados para Logar</h2>
-                <div class="input-group">
+                <div class="input-group group">
                     <i>👤</i>
                     <input type="text" id="username" required>
                     <label for="username">Email ou Usuário</label>
+
+                    <span class="mensagem-erro" id="username-erro"></span>
                 </div>
-                <div class="input-group">
+                <div class="input-group group">
                     <i>🔒</i>
                     <input type="password" id="password" required>
                     <label for="password">Senha</label>
+
+                    <span class="mensagem-erro" id="password-erro"></span>
                 </div>
                 <button type="submit">Entrar</button>
                 <div class="links">
